--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,19 @@ li {
   text-decoration: none;
 }
 
+.secondary-heading {
+  font-size: 50px;
+  text-align: center;
+  color: var(--green);
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  .secondary-heading {
+    font-size: 30px;
+  }
+}
+
 /* Navigation */
 .header {
   width: 100%;
@@ -180,9 +193,15 @@ label.icon {
   }
 }
 
+@media (max-width: 768px) {
+  .sec1 {
+    padding: 50px 20px;
+  }
+}
+
 /* Mission Section*/
 .sec2 {
-  padding: 50px 50px;
+  padding: 50px;
   display: flex;
   gap: 40px;
   justify-content: space-around;
@@ -239,18 +258,17 @@ label.icon {
   }
 }
 
+@media (max-width: 768px) {
+  .sec2 {
+    padding: 50px 20px;
+  }
+}
+
 /* Programs Section*/
 .sec3 {
   padding: 50px;
   max-width: 1280px;
   margin: auto;
-}
-
-.secondary-heading {
-  font-size: 50px;
-  text-align: center;
-  color: var(--green);
-  margin-bottom: 40px;
 }
 
 .program-box {
@@ -309,6 +327,10 @@ label.icon {
 }
 
 @media (max-width: 768px) {
+  .sec3 {
+    padding: 50px 20px;
+  }
+
   .program-box {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -330,6 +352,12 @@ label.icon {
 @media (max-width: 1024px) {
   .one {
     flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 768px) {
+  .sec4 {
+    padding: 50px 20px;
   }
 }
 
@@ -436,4 +464,10 @@ footer .menu li a:hover {
 footer p {
   margin-top: 15px;
   font-size: 15px;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 20px 20px 40px;
+  }
 }
