style: added gap to footer

--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,7 @@ footer .menu {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 20px;
   margin: 10px 0;
   flex-wrap: wrap;
 }
