--- a/css/base.css
+++ b/css/base.css
@@ -36,10 +36,10 @@ a {
   text-decoration: none;
 }
 
-.container {
+/* .container {
   max-width: 1140px;
   margin: 0 auto;
-}
+} */
 
 /* Navigation */
 .header {
@@ -61,6 +61,8 @@ a {
   align-items: center;
   justify-content: space-between;
   height: 100%;
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 .logo-container {
