--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,132 @@
     font-size: 30px;
   }
 }
-
+/*our program section*/
+.contain{
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 150px;
+}
+.heading{
+  font-size: 36px;
+  font-weight: 500;
+}
+.primary-paragraph{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+@media screen and (max-width:1024px){
+  .contain{
+    max-width: 900px;
+    padding: 0 1.25rem;
+  }
+  .heading{
+    font-size: 28px;
+  }
+}
+@media screen and (max-width:900px){
+  .contain{
+    max-width:700px;
+    margin-top: 7rem;
+    margin-bottom: 10rem;
+  } 
+}
+.primary-paragraph{
+  max-width: 478px;
+  margin-top: 1.25rem;
+}
+.container{
+  display: grid;
+  grid-template-columns: repeat(3,minmax(0,1fr));
+  gap: 2.5rem;
+  place-content: center;
+  margin-top: 3rem;
+}
+.card{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 10;
+}
+.card::before{
+  border: 3px solid #000;
+  border-right-width: 0;
+  bottom: -20px;
+  content: "";
+  height: 90%;
+  left: -12px;
+  position: absolute;
+  width: 95%;
+  z-index: -1;
+}
+.card-box{
+  padding: 1.25rem;
+}
+.card-box h3{
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 1.75rem;
+}
+.card-box p{
+  font-size:1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  margin-top: 0.75rem;
+}
+.card-box a{
+  transition: all 0.15s;
+  display: flex;
+  margin-top: 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+  padding: 0.75rem 1.5rem;
+  padding-left: 0;
+  }
+  .card-box a span{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: all 0.2s;
+  }
+  .card-box a:hover span{
+    gap: 15px;
+  }
+  .icon{
+    display: inline-block;
+    font-size: 25px;
+    --ionicon-stroke-width:8px;
+  }
+  @media screen and (max-width:1024px){
+    .container{
+      grid-template-columns: repeat(2, minmax(0,1fr));
+    }
+    
+  }
+  @media screen and (max-width:768px){
+    .primary-paragraph{
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
+    .card-image{
+      height: 141px;
+    }
+    .card-box{
+      padding: 0.875rem;
+    }
+    .card-box h3{
+      font-size: 1.125rem;
+    }
+    .card-box p{
+      font-size: 0.875rem;
+      line-height: 1.25rem;
+    }
+  }
+  @media screen and (max-width:640px){
+    .container{
+      grid-template-columns: repeat(1,minmax(0,1fr));
+    }
+  }
 /* Programs Section*/
 .sec3 {
   padding: 50px;
